--- a/Clock/index.html
+++ b/Clock/index.html
@@ -5,23 +5,20 @@
   <meta charset="UTF-8">
   <title>JS + CSS Clock</title>
   <link rel="stylesheet" href="styles.css"></link>
-
 </head>
 
 <body background="Images/Layer 1.png">
 
-
   <div class="clock">
     <div class="clock-face">
-      <div class="hand hour-hand"></div>
-      <div class="hand min-hand"></div>
-      <div class="hand second-hand"></div>
+      <div class="hand-hour-hand"></div>
+      <div class="hand-min-hand"></div>
+      <div class="hand-second-hand"></div>
+      <div class="center-circle"></div>
     </div>
   </div>
+
   <script src="scripts.js"></script>
-
-
-
 
 </body>
 
